Creacion de Pag editar usuario y esqueleto de pag jugar

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,6 @@ h1 {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #fffbfb
+    background-color: #0c000035
   }
 }
