Creacion pagina Alta de un Mazo y cambios varios

--- a/src/assets/styles/navBar.css
+++ b/src/assets/styles/navBar.css
@@ -21,8 +21,8 @@
     font-size: 1vw;
     font-weight: 600;
     text-decoration: none;
-    color: rgb(241, 241, 243);
-    background-color:rgb(31, 100, 183); 
+    color:  rgb(99, 154, 173);
+    background-color:hsl(219, 79%, 13%); 
     margin:1.5vw;   
     
 }
