--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -15,7 +15,7 @@
 }
 .titulo{
     font-size: 4vw;
-    color: rgb(99, 154, 173);
+    color: white;
     font-weight: 600;
     text-decoration:none;
 }
