--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -3,7 +3,7 @@
     font-size: 1vw;
     color: rgb(248, 248, 247);
     font-weight: 600;
-    background-color: rgb(99, 154, 173);
+    background-color: #19376e;
     width: 100vw;
     height: 2vw;
     justify-content: left;    
