--- a/src/assets/styles/AltaMazo.css
+++ b/src/assets/styles/AltaMazo.css
@@ -107,3 +107,13 @@ input[type="submit"]:hover{
   background-color: #1c2b46; 
   cursor: pointer; 
 }
+.filaDeCartas {
+  display: flex;
+  flex-wrap:nowrap; /* opcional: si hay muchas cartas que no entran en una línea */
+  gap: 1vw;
+  padding: 1vw;  
+  flex-shrink: 1; 
+  align-items: center;
+  justify-content:center;
+  text-align:justify;
+}
