--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 
-@media (prefers-color-scheme: light) {
+/*@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #0c000035
