--- a/src/assets/styles/navBar.css
+++ b/src/assets/styles/navBar.css
@@ -6,7 +6,7 @@
     font-weight: 600;
     background-color: hsl(219, 79%, 13%);
     width: 100vw;
-    height: 2vw;
+    height: 4vh;
     justify-content: center;    
     text-decoration: none;
     display: flex;
@@ -20,6 +20,7 @@
     gap: 5vw;  
     font-size: 1vw;
     font-weight: 600;
+    height: 4vh;
     text-decoration: none;
     color:  white;
     background-color:hsl(219, 79%, 13%); 
