--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color: rgba(255, 255, 255, 0.87);
-  background-color: #2e204d;
+  background-color: #282749;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
