--- a/src/assets/styles/AltaMazo.css
+++ b/src/assets/styles/AltaMazo.css
@@ -60,7 +60,7 @@ input[type="submit"]:hover{
 
 .atributosCarta{
     display: flex;
-    margin: 0 2vw 0 auto;
+    margin: 0 1.5vw 0 auto;
     gap: 1vw;
 }
 
@@ -98,10 +98,12 @@ input[type="submit"]:hover{
     background-color: rgb(6, 3, 35);
 }
 
-
+.tablatotal th{
+    width: 7vw;
+}
 .tablatotal td {
   border-collapse: collapse;
-  padding: 1vw 2.8vw;
+  padding: 1vw 2.74vw;
   text-align: center;
   vertical-align: middle;
   background-color: #07193b;
