--- a/src/assets/styles/statpage.css
+++ b/src/assets/styles/statpage.css
@@ -57,7 +57,7 @@ button{
 }
 
 button:hover{
-    background-color: #19376e;
+    background-color: #07193b;;
     color: white;
     cursor: pointer;
 }
