--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color: rgba(255, 255, 255, 0.87);
-  background-color: #1f1c38;
+  background-color: #31538d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
