--- a/src/assets/styles/jugar.css
+++ b/src/assets/styles/jugar.css
@@ -73,74 +73,90 @@
 }
 .tituloCarta{
   font-size: medium ;
-  color: rgb(127, 23, 23);
+  margin-top: 5px;
+  color: rgb(255, 255, 255);
+  font-weight: 750;
 }
 
 .etiquetaCarta{
-  color: rgb(116, 57, 57);
+  color: rgb(207, 187, 69);
 }
 
 .ultCartaUser{
   position: fixed;
-  width: 20vw;
   right: 8vw;
   bottom: 12vh;
+  cursor: default;
 }
 
 .ultCartaServer{
   position: fixed;
-  width: 20vw;
   right: 8vw;
   top: 25vh;
 }
 
-.ultCartaUser, .ultCartaServer{
-  
-  background-color: white;
-  color: #07193b;
-  border-radius: .5vw;
-  font-weight: 600;
+.botonCartasJugada:hover{
+  background-color: rgb(39, 46, 117);
+  cursor: default;
+}
+
+.botonCartasJugada{
+  box-shadow: 0 0 10px rgb(255, 255, 255);
   display: flex;            
   flex-direction: column;   
+  color: rgb(255, 255, 255);
+  background-color: rgb(39, 46, 117);
+  background-image: repeating-radial-gradient(rgb(0, 0, 0) .5px, transparent 2px);
+  background-size: 20px 20px;
   justify-content: flex-start;
   vertical-align: top;     
   text-align: center;
   box-sizing: border-box;
-  border: 5px groove #07193b;
+  border: 4px ridge #75759f;
   font-size: small;
   height: 27vh;
   width: 8vw;
+  gap: 1vh;
+  margin-left: 1.2vw;
+  margin-right: 1.2vw;
 }
 
 .etiquetaServer{
-  font-weight: 800;
+  font-weight: 900;
 }
 
 
 .cartasServer{
+  cursor: default;
   margin-top: 2vh;
   display: block;
   font-size: medium;
   text-align: center;
-  font-weight: 600;
+  font-weight: 800;
   height: 27vh;
   width: 8vw;
   box-sizing: border-box;
-  border: 5px groove #07193b;
-  background-color: #487ad7;
+  border: 4px ridge #d4d4f3;
+  background-color: #00143a;
   color: white;
   border-radius: .5vw;
   margin-left: 1.2vw;
   margin-right: 1.2vw;
+  background-image: repeating-radial-gradient(rgba(255, 255, 255, 0.724) .5px, transparent 2px);
+  background-size: 20px 20px;
 }
 .botonCartas{
   display: flex;            
   flex-direction: column;   
+  color: rgb(255, 255, 255);
+  background-color: rgb(39, 46, 117);
+  background-image: repeating-radial-gradient(rgb(0, 0, 0) .5px, transparent 2px);
+  background-size: 20px 20px;
   justify-content: flex-start;
   vertical-align: top;     
   text-align: center;
   box-sizing: border-box;
-  border: 5px groove #07193b;
+  border: 4px ridge #75759f;
   font-size: small;
   height: 27vh;
   width: 8vw;
@@ -149,29 +165,30 @@
   margin-right: 1.2vw;
 }
 .botonCartas:hover{
-  background-color: rgb(255, 255, 255);
-  color: #3a4f75;
-}
-
-.botonCartas:hover .etiquetaCarta{
-  color: rgb(161, 93, 93);
-}
-
-.botonCartas:hover .tituloCarta{
-  color: rgb(163, 140, 28);
+  background-color: rgb(62, 69, 142);
 }
 .mensajeJugada{
   position: fixed;
-  width: 20vw;
+  width: 15vw;
+  padding: 2vw;
+  height: auto;
+  display: flex;
+  vertical-align: center;
+  align-items: center;
+  place-content: center;
   left: 2vw;
-  bottom: 40vh;
-  color: white;
+  bottom: 32vh;
+  font-weight: 700;
+  background-color: #07193b;
+  border-radius: 2rem;
+  box-shadow: 0 0 7px rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   text-align: center;
 }
 .botonPlayAgain{
   position: fixed;
-  left: 4.5vw;
+  left: 4vw;
   width: 15vw;
   height: 10vh;
-  bottom: 30vh;
+  bottom: 15vh;
 }
