--- a/src/assets/styles/editarUsuario.css
+++ b/src/assets/styles/editarUsuario.css
@@ -54,6 +54,6 @@ input{
 }
 
 .botonEnviarForm:hover{
-    background-color: #19376e;
+    background-color:  rgb(25, 58, 25);
     cursor: pointer;
 }
