--- a/src/assets/styles/jugar.css
+++ b/src/assets/styles/jugar.css
@@ -15,16 +15,20 @@
   justify-content: center; 
   min-width: 50vw;
   margin-left: 25vw;
-  gap: 35vh;
+  gap: 25vh;
 }
 
 .tablaCentrada th{
   border: none;
+} 
+.botonIniciar:hover, .botonIniciarProhibido:hover{
+  background-color: rgb(25, 58, 25);
 }
 .botonIniciar, .botonIniciarProhibido{
-  font-size: 1.5vw;
-  width: 15vw;
-  height: 10vh;
+  font-size: x-large;
+  width: 250px;
+  border-radius: 10rem;
+  height: 100px;
 }
 .tdSeleccion{
   display: flex;
@@ -191,4 +195,31 @@
   width: 15vw;
   height: 10vh;
   bottom: 15vh;
+}
+.eliminarPartida{
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  justify-content: center; 
+  width: 100vw;
+}
+.msj-Error{
+  color: #630000b1;
+  font-size: xx-large;
+  font-weight: 800;
+}
+
+.boton-eliminarPartida{
+  width: 250px;
+  font-size: medium;
+  height: 100px;
+  font-weight: 800;
+  border-radius: 20rem;
+  color:#630000e1;
+}
+
+.boton-eliminarPartida:hover{
+  background-color: #630000b2;
+  color: white;
+  border-radius: 20rem;
 }
