--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -5,12 +5,15 @@
     color: rgb(248, 248, 247);
     font-weight: 600;
     background-color: #19376e;
-    width: 100vw;
+    width: 100%;
     height: 2vw;
     justify-content: left;    
     text-decoration: none;
     position: fixed;
     bottom: 0%;
     display: flex;
-    gap: 1.5vw;  
+    gap: 68vw;  
+}
+.nombres{
+    display: flex;
 }
