--- a/src/assets/styles/misMazos.css
+++ b/src/assets/styles/misMazos.css
@@ -13,6 +13,11 @@
     width: 45vw;
     height: 100%;    
 }
+.noHayMazos{
+    width: 45vw;
+    font-size: large;
+    font-weight: 700;
+}
 .nombreMazo{
     font-weight: 800;
     background-color: rgb(192, 192, 192);
