--- a/src/styles/NotiToast.css
+++ b/src/styles/NotiToast.css
@@ -1,7 +1,6 @@
 
 .texto-notificacion{
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    color: rgb(53, 24, 62);
     text-align: center;      
     position: relative;  
     top: 5px;   
@@ -32,9 +31,9 @@
     box-shadow: -7px 0px 1px #6a0613;
 }
 .toast-container{
-    position: fixed;
+    position: absolute;
     width: 200px;
-    height: auto;
+    height: 100px;
     margin: 0;
     padding: 0;
     left:3vw;
@@ -42,21 +41,4 @@
     right: 0px;
   
     transition: ease-in; 
-}
-.cerrar-noti{    
-    background: rgba(207, 205, 205, 0.271);
-    border: none;
-    color: #002B44;
-    font-size: 15px;
-    float:right;
-    cursor: pointer;
-    position: relative;      
-    margin: 0;
-    padding: 0;
-    bottom: 0;
-    top:2px;
-    left:-2px;
-    min-height: 100%;
-    min-width: 20px;    
-    z-index: 9999; 
 }
