--- a/src/styles/NotiToast.css
+++ b/src/styles/NotiToast.css
@@ -1,8 +1,7 @@
 .toast-container {
   position: fixed;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 20%;
+  left: 2%;
   width: auto;
   z-index: 9999;
 }
@@ -11,30 +10,32 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(25, 58, 25);
+  background-color: rgb(34, 78, 34);
   min-height: 40px;
   padding: 10px;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: -5px 0px 3px rgb(34, 117, 34);
   box-sizing: border-box;
   width: 100%;
   text-align: center;
-  z-index: 9999;
+  z-index: 9999;    
+  text-shadow: 1px 1px 5px #000000;
 }
 
 .toast-error {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #630000;
+  background-color:rgb(106, 15, 10);
   min-height: 40px;
   padding: 10px;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: -6px 0px 3px  #8c0d0d;
   box-sizing: border-box;
   width: 100%;
   text-align: center;
-  z-index: 9999;
+  z-index: 9999;  
+  text-shadow: 1px 1px 5px #000000bc;
 }
 
 .texto-notificacion {
