--- a/src/styles/NotiToast.css
+++ b/src/styles/NotiToast.css
@@ -1,44 +1,50 @@
+.toast-container {
+  position: fixed;
+  top: 20%;
+  left: 2%;
+  width: auto;
+  z-index: 9999;
+}
 
-.texto-notificacion{
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    text-align: center;      
-    position: relative;  
-    top: 5px;   
-    margin: 0;
-    font-weight: 600;
-    color:#002B44;
+.toast {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(34, 78, 34);
+  min-height: 40px;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: -5px 0px 3px rgb(34, 117, 34);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: center;
+  z-index: 9999;    
+  text-shadow: 1px 1px 5px #000000;
 }
-.toast{    
-    position:relative;    
-    z-index: 9999;
-    background-color: rgb(251, 251, 251);
-    min-height: 35px;
-    margin: 0;
-    padding: 0;
-    bottom: 0;
-    border-radius: 8px;
-    box-shadow: -7px 0px 1px #12721d;
+
+.toast-error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:rgb(106, 15, 10);
+  min-height: 40px;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: -6px 0px 3px  #8c0d0d;
+  box-sizing: border-box;
+  width: 100%;
+  text-align: center;
+  z-index: 9999;  
+  text-shadow: 1px 1px 5px #000000bc;
 }
-.toast-error{
-    position:relative;    
-    z-index: 9999;
-    background-color: rgb(251, 251, 251);
-    min-height: 35px;
-    margin: 0;
-    padding: 0;
-    bottom: 0;
-    border-radius: 8px;
-    box-shadow: -7px 0px 1px #6a0613;
-}
-.toast-container{
-    position: absolute;
-    width: 200px;
-    height: 100px;
-    margin: 0;
-    padding: 0;
-    left:3vw;
-    top: 18vh;
-    right: 0px;
-  
-    transition: ease-in; 
+
+.texto-notificacion {
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-weight: 600;
+  color: white;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  word-break: break-word;
+  text-align: center;
 }
